tests/feature_tests/error_main3.c
// error: first parameter of 'main' must be of integer type
int main(long a, int b) {}
